# test_console_wasm

./: .gitignore  Cargo.toml  build.sh
src/: generated_lib.rs.bak  lib.rs
web/: .gitignore  index.js  package-lock.json
